--- a/POKEMON RED/POKEMON RED.csproj
+++ b/POKEMON RED/POKEMON RED.csproj
@@ -14,9 +14,31 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="SaveStates\savestate.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="textfiles\introduction - Copy.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="textfiles\introduction.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="textfiles\oakResearchLab.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="textfiles\playersHouse.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="textfiles\rivalHouse.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="textfiles\route1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="SaveStates\" />
   </ItemGroup>
 
 </Project>
